sdz-operator/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak  
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - image: "registry.gitlab.warpnet.nl/securedropzone/securedropzone-e2ee/keycloak:1.7.0"
          name: keycloak
          ports:
            - containerPort: 8080
              name: keycloak
          args: ["start-dev"]
            

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service  
spec:
  selector:
    app: keycloak
  ports:
    - port: 8081
      targetPort: 8080
